@@ -18,6 +18,7 @@ dolly-ghost-move=Allow moving ghosts
 dolly-item-destroy=Destroy ground items if inventory is full
 dolly-transporter-mode=Enable "Transporter" mode
 dolly-remote-move=Allow moving entities in remote view
+dolly-biter-move=Allow moving biters and biter related entities
 
 [mod-setting-description]
 dolly-save-entity=Temporarily saves entities for X seconds so they can be moved without having to keep selecing them. 0 to disable saving.
@@ -29,6 +30,7 @@ dolly-ghost-move=Allow moving ghost entities around.
 dolly-item-destroy=When entities are moved and items are on the ground, they get "hoovered" up and stored in the inventory. When the inventory is full, instead of refusing to move the entity, destroy the items.
 dolly-transporter-mode=Moves entities that normally can not be moved by creating an identical copy and destroying the original (Which is how the Star Trek Transporter actually works).
 dolly-remote-move=Allow moving entities when the player is not near an entity but looks at it in the remote view.
+dolly-biter-move=Allow moving biter and biter-spawner entities. Also affects captured biter-spawners.
 
 [picker-dollies]
 cant-be-teleported=__1__ does not support moving.
