@@ -46,6 +46,11 @@ function mod_settings.get_ghost_move()
 end
 
 ---@return boolean
+function mod_settings.get_biter_move()
+    return settings.startup['dolly-biter-move'].value or false --[[@as boolean]]
+end
+
+---@return boolean
 function mod_settings.get_item_destroy()
     return settings.startup['dolly-item-destroy'].value or false --[[@as boolean]]
 end
